Keyboard caret movement in textarea with RTL Override Character can make tab unresponsive https://bugs.webkit.org/show_bug.cgi?id=103067

Patch by Yi Shen <max.hong.shen@gmail.com> on 2012-12-10
Reviewed by Ryosuke Niwa.

Source/WebCore:

For textarea with RTL override character, the line break could be the previous leaf InlineTextBox of
the InlineTextBox for the RTL override text. When overshots the left/right, make sure the
leftVisuallyDistinctCandidate and rightVisuallyDistinctCandidate return the visually distinct
left/right position by ignoring the line break.

Test: editing/selection/move-by-character-crash-test-textarea.html

* editing/VisiblePosition.cpp:
(WebCore::VisiblePosition::leftVisuallyDistinctCandidate):
(WebCore::VisiblePosition::rightVisuallyDistinctCandidate):

LayoutTests:

New test for moving caret in textarea with RTL override character causes crash.

* editing/selection/move-by-character-crash-test-textarea-expected.txt: Added.
* editing/selection/move-by-character-crash-test-textarea.html: Added.

Canonical link: https://commits.webkit.org/122768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137213 268f45cc-cd09-0410-ab3c-d52691b4dbfc